[FIX] openAPIYAML
